<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_30sdp"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/fragment_login_to_your_account_iv_logo"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:scaleType="fitCenter"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name"
        android:src="@drawable/img_logo_white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="@dimen/_30sdp"
        android:orientation="vertical"
        android:gravity="bottom">

        <TextView
            android:id="@+id/fragment_login_to_your_account_tv_title_login_credentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fragment_login_to_your_tv_title_login_credentials"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/fragment_login_to_your_account_et_user_name"
            style="@style/style_et_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:ellipsize="end"
            android:hint="@string/fragment_login_to_your_et_hint_email_id"
            android:inputType="textEmailAddress"
            android:textAlignment="viewStart"
            android:autofillHints="emailAddress"
            android:textColor="@color/colorBlack" />
        <!--android:drawableEnd="@drawable/ic_highlight_off_black_24dp"-->

        <EditText
            android:id="@+id/fragment_login_to_your_account_et_password"
            style="@style/style_et_login"
            android:layout_width="match_parent"
            android:drawableEnd="@drawable/ic_eye_off"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:hint="@string/fragment_login_to_your_et_hint_pwd"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:textAlignment="viewStart"
            android:textColor="@color/colorBlack" />

        <Button
            android:id="@+id/fragment_login_to_your_account_tv_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_to_your_tv_login"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_bg_orange"
            android:textAllCaps="false"
            android:layout_marginTop="@dimen/_10sdp"
            android:textSize="@dimen/_15sdp" />

        <Button
            android:id="@+id/fragment_login_to_your_account_tv_forgot_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_5sdp"
            android:drawableStart="@drawable/ic_lock_outline"
            android:gravity="center"
            android:textAllCaps="false"
            android:textColor="@color/colorOrange_new"
            android:background="@drawable/button_bg_white"
            android:paddingHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/fragment_login_to_your_tv_forgot_pws"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/fragment_login_to_your_account_tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textAllCaps="false"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/font_15sp"
            app:drawableStartCompat="@drawable/ic_arrow_back_ios_24" />
    </LinearLayout>

</LinearLayout>

